[gd_scene load_steps=14 format=2]

[ext_resource path="res://Managing/Colliders/Hitbox.tscn" type="PackedScene" id=1]
[ext_resource path="res://Entities/Enemies/Miner/EnemyBoomerang.gd" type="Script" id=2]
[ext_resource path="res://Entities/Enemies/Miner/Head.png" type="Texture" id=3]
[ext_resource path="res://Items/Weapons/Bullet/bulletParticles.png" type="Texture" id=4]

[sub_resource type="CanvasItemMaterial" id=9]
particles_animation = true
particles_anim_h_frames = 4
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="Gradient" id=11]
offsets = PoolRealArray( 0.2891, 1 )
colors = PoolColorArray( 0.0121188, 0.0191306, 0.110801, 1, 1, 1, 1, 1 )

[sub_resource type="GradientTexture" id=12]
gradient = SubResource( 11 )

[sub_resource type="Curve" id=14]
_data = [ Vector2( 0.00862069, 0.9875 ), 0.0, -0.0379713, 0, 0, Vector2( 0.713675, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), -1.09332, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=15]
curve = SubResource( 14 )

[sub_resource type="ParticlesMaterial" id=13]
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
initial_velocity = 120.0
initial_velocity_random = 0.75
angular_velocity = 188.41
angular_velocity_random = 0.55
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 2.0
scale_random = 0.5
scale_curve = SubResource( 15 )
color_ramp = SubResource( 12 )
anim_offset = 1.0
anim_offset_random = 1.0

[sub_resource type="Animation" id=10]
resource_name = "kill"
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="CircleShape2D" id=4]
radius = 7.0

[sub_resource type="CircleShape2D" id=5]
radius = 1.0

[node name="Bullet" type="KinematicBody2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource( 2 )

[node name="Particles" type="Particles2D" parent="."]
material = SubResource( 9 )
z_index = 2
emitting = false
amount = 12
lifetime = 0.2
one_shot = true
explosiveness = 1.0
local_coords = false
process_material = SubResource( 13 )
texture = ExtResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Particles"]
autoplay = "kill"
anims/kill = SubResource( 10 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="Hitbox" parent="." groups=["playerBullet"] instance=ExtResource( 1 )]
collision_layer = 4
collision_mask = 2
damage = 1

[node name="CollisionShape2D" parent="Hitbox" index="0"]
shape = SubResource( 4 )

[node name="QueueArea" type="Area2D" parent="." groups=["PlayerBullet"]]
visible = false
collision_layer = 2
collision_mask = 32769

[node name="CollisionShape2D" type="CollisionShape2D" parent="QueueArea"]
shape = SubResource( 5 )

[node name="DieTween" type="Tween" parent="."]

[node name="Lifetime" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="hit_object" from="Hitbox" to="." method="_on_Hitbox_hit_object"]
[connection signal="body_entered" from="QueueArea" to="." method="_on_QueueArea_body_entered"]
[connection signal="timeout" from="Lifetime" to="." method="_on_lifetime_timeout"]

[editable path="Hitbox"]
